built GUI for querying the database